--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/faker": "^6.6.9",
+    "@types/google.maps": "^3.52.5",
+    "@types/googlemaps": "^3.43.3",
     "axios": "^0.21.1",
     "faker": "^5.5.3"
   },
