--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/google.maps": "^3.52.5",
     "@types/googlemaps": "^3.43.3",
     "axios": "^0.21.1",
-    "faker": "^5.5.3"
+    "concurrently": "^8.0.1",
+    "faker": "^5.5.3",
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "typescript": "^5.0.3"
